# server/docs/swagger.json
@@ -416,7 +416,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.GetFavoriteResp"
+                            "$ref": "#/definitions/types.GetFavResp"
                         }
                     },
                     "400": {
@@ -469,22 +469,22 @@
                 }
             }
         },
-        "/user/action": {
+        "/interaction/personas": {
             "post": {
-                "description": "通过表单提交进行关注/取关",
+                "description": "通过表单提交用户感兴趣视频",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
                 "produces": [
                     "application/json"
                 ],
-                "summary": "用户关注/取关",
-                "operationId": "UserAction",
+                "summary": "用户喜好上传",
+                "operationId": "Personas",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "对方用户id",
-                        "name": "user_id",
+                        "description": "标签id",
+                        "name": "CategoryId",
                         "in": "formData",
                         "required": true
                     }
@@ -505,8 +505,120 @@
                 }
             }
         },
-        "/user/login": {
+        "/user/action": {
             "post": {
+                "description": "通过表单提交进行关注/取关",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "用户关注/取关",
+                "operationId": "UserAction",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "对方用户id",
+                        "name": "user_id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "1为关注，2取关",
+                        "name": "type",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/follow": {
+            "get": {
+                "description": "通过userId查询用户关注列表",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "关注列表",
+                "operationId": "UserFollow",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.UserInfoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/follower": {
+            "get": {
+                "description": "通过userId查询用户粉丝列表",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "粉丝列表",
+                "operationId": "UserFollower",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.UserInfoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/info": {
+            "get": {
                 "description": "通过对方id和我的token获取对方用户信息",
                 "consumes": [
                     "application/json"
@@ -529,7 +641,50 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/api.Response"
+                            "$ref": "#/definitions/types.UserInfoResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/login": {
+            "post": {
+                "description": "通过表单提交进行用户登录",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "用户登录",
+                "operationId": "UserLogin",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.TokenData"
                         }
                     },
                     "400": {
@@ -584,6 +739,30 @@
                 }
             }
         },
+        "/video/before": {
+            "get": {
+                "description": "通过表单获取该用户的历史视频",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "视频流",
+                "operationId": "VideoFeed",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.GetFavResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/video/channel": {
             "get": {
                 "description": "通过表单提交获取该分类的视频",
@@ -604,6 +783,30 @@
                         "required": true
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.GetFavResp"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/video/hot": {
+            "get": {
+                "description": "获取热门视频列表",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "热门视频",
+                "operationId": "VideoHot",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -646,7 +849,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/types.Response"
+                            "$ref": "#/definitions/api.Response"
                         }
                     },
                     "400": {
@@ -692,6 +895,40 @@
                         "type": "file",
                         "description": "视频",
                         "name": "video",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "通过表单删除用户的视频",
+                "consumes": [
+                    "application/x-www-form-urlencoded"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "删除用户视频",
+                "operationId": "VideoDelPublish",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "用户id",
+                        "name": "user_id",
                         "in": "formData",
                         "required": true
                     }
@@ -831,15 +1068,12 @@
             "type": "object",
             "properties": {
                 "color": {
-                    "description": "弹幕颜色",
                     "type": "string"
                 },
                 "content": {
-                    "description": "弹幕内容",
                     "type": "string"
                 },
                 "timestamp": {
-                    "description": "弹幕出现的时间戳",
                     "type": "integer"
                 }
             }
@@ -848,19 +1082,18 @@
             "type": "object",
             "properties": {
                 "avatar": {
-                    "description": "用户头像",
                     "type": "string"
                 },
                 "content": {
-                    "description": "评论内容",
                     "type": "string"
                 },
-                "create_date": {
-                    "description": "评论发布日期，格式 mm-dd",
-                    "type": "string"
+                "create_time": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
                 },
                 "user_name": {
-                    "description": "用户名",
                     "type": "string"
                 }
             }
@@ -868,37 +1101,35 @@
         "types.GetFavResp": {
             "type": "object",
             "properties": {
+                "author_id": {
+                    "type": "integer"
+                },
                 "author_name": {
-                    "description": "视频作者",
                     "type": "string"
                 },
-                "category_id": {
-                    "description": "视频所属领域",
+                "category": {
                     "type": "string"
                 },
                 "collection_count": {
-                    "description": "视频总收藏数",
                     "type": "integer"
                 },
                 "cover_url": {
-                    "description": "视频封面地址",
                     "type": "string"
                 },
                 "create_time": {
-                    "description": "视频创建时间",
                     "type": "integer"
                 },
                 "favorite_count": {
-                    "description": "视频的点赞总数",
                     "type": "integer"
                 },
                 "play_url": {
-                    "description": "播放地址",
                     "type": "string"
                 },
                 "title": {
-                    "description": "视频标题",
                     "type": "string"
+                },
+                "video_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -906,7 +1137,6 @@
             "type": "object",
             "properties": {
                 "collection_name": {
-                    "description": "收藏夹名",
                     "type": "string"
                 },
                 "create_time": {
@@ -922,43 +1152,56 @@
                     "type": "integer"
                 },
                 "user_name": {
-                    "description": "收藏夹创建人",
                     "type": "string"
                 }
             }
         },
-        "types.GetFavoriteResp": {
+        "types.TokenData": {
             "type": "object",
             "properties": {
-                "author_name": {
-                    "description": "视频作者",
-                    "type": "integer"
-                },
-                "collection_count": {
-                    "description": "播放总数",
-                    "type": "integer"
-                },
-                "cover_url": {
-                    "description": "视频封面地址",
+                "token": {
                     "type": "string"
                 },
-                "title": {
-                    "description": "视频标题",
-                    "type": "string"
-                }
+                "user": {}
             }
         },
-        "types.Response": {
+        "types.UserInfoResp": {
             "type": "object",
             "properties": {
-                "data": {},
-                "error": {
+                "avatar": {
+                    "description": "用户头像",
                     "type": "string"
                 },
-                "msg": {
+                "background_image": {
+                    "description": "用户个人页顶部大图",
                     "type": "string"
                 },
-                "status": {
+                "favorite_count": {
+                    "description": "喜欢数",
+                    "type": "integer"
+                },
+                "follow_count": {
+                    "description": "关注总数",
+                    "type": "integer"
+                },
+                "follower_count": {
+                    "description": "粉丝总数",
+                    "type": "integer"
+                },
+                "id": {
+                    "description": "用户 id",
+                    "type": "integer"
+                },
+                "is_follow": {
+                    "description": "true-已关注，false-未关注",
+                    "type": "boolean"
+                },
+                "name": {
+                    "description": "用户名称",
+                    "type": "string"
+                },
+                "work_count": {
+                    "description": "作品数",
                     "type": "integer"
                 }
             }
@@ -967,18 +1210,20 @@
             "type": "object",
             "properties": {
                 "category_id": {
-                    "description": "视频所属领域",
                     "type": "integer"
                 },
                 "title": {
-                    "description": "视频标题",
                     "type": "string"
                 },
                 "video_id": {
-                    "description": "视频id",
                     "type": "integer"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
